[gd_scene load_steps=14 format=3 uid="uid://t5h7bxsvaahy"]

[ext_resource type="Script" path="res://entities/structures/portal/portal.gd" id="1_34402"]
[ext_resource type="Texture2D" uid="uid://b03va5qdcidym" path="res://entities/structures/portal/portal.png" id="2_gyvkf"]
[ext_resource type="Texture2D" uid="uid://cqq1q1ofo7hrg" path="res://entities/structures/portal/vortex.png" id="3_2i3rn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4h1u"]
atlas = ExtResource("3_2i3rn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpbcj"]
atlas = ExtResource("3_2i3rn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8yte"]
atlas = ExtResource("3_2i3rn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34yl4"]
atlas = ExtResource("3_2i3rn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nee6u"]
atlas = ExtResource("3_2i3rn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_weamk"]
atlas = ExtResource("3_2i3rn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8k21"]
atlas = ExtResource("3_2i3rn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdn4s"]
atlas = ExtResource("3_2i3rn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ue4k2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4h1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpbcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8yte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34yl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nee6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weamk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8k21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdn4s")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tth1e"]
radius = 7.0
height = 40.0

[node name="Portal" type="StaticBody2D" groups=["Structures"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_34402")

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_gyvkf")

[node name="Vortex" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.19209e-07, 4)
scale = Vector2(0.875, 0.875)
sprite_frames = SubResource("SpriteFrames_ue4k2")
autoplay = "default"
frame_progress = 0.366293

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tth1e")

[node name="TeleportPosition" type="Marker2D" parent="."]
position = Vector2(0, 23)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_end_cooldown"]
